# fastfunc

./: .gitignore  .pylintrc  Makefile  README.md  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
fastfunc/: __about__.py  __init__.py  add.py  divide.py  helpers.py  multiply.py  subtract.py
src/: add_at.hpp  pybind11.cpp
test/: performance.py  test_at.py  test_fastfunc.py
