[metadata]
name = fastfunc
version = 0.2.3
url = https://github.com/nschloe/fastfunc
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Fast NumPy ufunc operations
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    numpy
python_requires = >=3.6
